.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Disable_Price_Change__c</fullName>
        <formula>IF(PricebookEntry.Product2.Disable_Price_Change__c ==TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Price Change</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(List_Price_Grand_Total__c &gt; 0, (List_Price_Grand_Total__c - TotalPrice)/List_Price_Grand_Total__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsPackageChild__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPackageChild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price_Grand_Total__c</fullName>
        <formula>Quantity *  ListPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget__c</fullName>
        <label>Monthly Advertising Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Time Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Forecast__c</fullName>
        <label>PS Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductIsParent__c</fullName>
        <formula>if(PricebookEntry.Product2.IsPackageParent__c, &quot;T&quot;, &quot;F&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductIsParent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Cost_Factor__c</fullName>
        <description>*** ADMIN ONLY ***
Cost Factor rolled over from the related Product</description>
        <formula>PricebookEntry.Product2.Cost_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StickyOpportunityID__c</fullName>
        <label>StickyOpportunityID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Product_Amount__c</fullName>
        <formula>(UnitPrice * Quantity)  * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Product Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Product_BU_is_not_the_same_as_Opp_BU</fullName>
        <active>false</active>
        <description>Checks to see if the BU Type on the Opportunity and the Product BU on the Product match.</description>
        <errorConditionFormula>TEXT(Product2.Product_BU__c) &lt;&gt; TEXT(Opportunity.BU__c)</errorConditionFormula>
        <errorMessage>You have a selected a product that is different from the Business Unit you have selected on the Opportunity. Please go back to the Opportunity and either change the BU Type, or select the appropriate Price Book.</errorMessage>
    </validationRules>
</CustomObject>